# chatgpt-translator

./: .gitignore  Dockerfile  Makefile  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: check-and-test.yml
src/: main.py
src/api/: app.py
tests/server/: test_app.py
