[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "chatgpt-stranslator"
version = "0.1.0"
dependencies = [
    "requests",
    "fastapi",
    "openai",
]

[project.optional-dependencies]
dev = [
    "pytest"
]
