[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "chatgpt-translator"
version = "0.1.1"
dependencies = [
    "requests",
    "uvicorn",
    "fastapi",
    "openai",
]

[project.optional-dependencies]
dev = [
    "pytest"
]
